# ap-rustaceans-wit-attitudes

./: AP-TODO.md  Cargo.toml  README.md
.cargo/: config.toml
crates/config/: Cargo.toml
crates/drone/: Cargo.toml
crates/internal/: Cargo.toml
server_content/text_files/: 1  2  3  4  5  6  7  8
src/: config.toml  config_test.toml  main.rs  network_initializer.rs  test_config.toml  test_fragments.rs  testing.rs
src/assembler/: assembler.rs
src/client/: ClientServerCommand.rs  client.rs  client_server_command.rs  mod.rs
src/client_server/: client.rs  client_server_command.rs  communication_server.rs  content_server.rs  mod.rs  network_core.rs
src/drone/: drone.rs
src/message/: message.rs
src/network/: network.rs
src/network_initializer/: mod.rs  network_initializer.rs
src/server/: assembler.rs  communication_server.rs  content_server.rs  message.rs  mod.rs  server.rs
src/simulation/: simulation.rs
src/simulation_controller/: gui.rs  gui_structs.rs  logs_handler.rs  mod.rs  popup_handler.rs  simulation_controller.rs
src/types/: message.rs  mod.rs  my_drone.rs  packet.rs  source_routing_header.rs  test
