[package]
name = "ap-project-rustaceans-wit-attitudes"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
toml = "0.8.19"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
egui = "0.31"
eframe = "0.31"
chrono = "0.4"
chrono-tz = "0.6"
regex = "1.11.1"
