[package]
name = "ap-project-rustaceans-wit-attitudes"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
toml = "0.8.19"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
egui = "0.31.1"
eframe = "0.31.1"
chrono = "0.4"
chrono-tz = "0.10"
image = "0.24"
regex = "1.11.1"

# drones
rustaceans_wit_attitudes = { git = "https://github.com/Nicklaskiaer/ap-rustaceans-wit-attitudes-drone.git" }
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
bagel_bomber = { git = "https://github.com/daw-dev/bagel-bomber.git" }
TrustDrone = { git = "https://github.com/Beto-prog/TrustDone", package = "drone" }
rustastic-drone = { git = "https://github.com/Rustastic/RustasticDrone.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
rf_drone = { git = "https://github.com/RustAndFurious/RF_drone.git" }
LeDron_James = { git = "https://github.com/anass03/LeDron_James.git" }
rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git"}
rustafarian-drone = { git = "https://github.com/Rustafarian-Unitn/rustafarian-drone"}

[features]
debug = ["rustaceans_wit_attitudes/debug"] # cargo run --features debug
all_drones = [] # cargo run --features all_drones
# cargo run --features "debug all_drones"
# cargo run --features "debug all_drones" -- path/to/custom/config.toml